cmake_minimum_required(VERSION 3.18)

project(examples LANGUAGES C CXX)

# Install examples to root example dir, not bin/
set(CMAKE_INSTALL_BINDIR .)

function(install_example target)
  install(TARGETS ${target})
  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${target}.elf TYPE BIN)
endfunction()

add_executable(minimal minimal.c)
install_example(minimal)
if(HOSTED)
  add_executable(fixed-point fixed-point.cc)
  install_example(fixed-point)
  add_executable(hello-getchar hello-getchar.c)
  install_example(hello-getchar)
  add_executable(hello-malloc hello-malloc.c)
  install_example(hello-malloc)
  add_executable(hello-new hello-new.cc)
  install_example(hello-new)
  add_executable(hello-printf hello-printf.c)
  install_example(hello-printf)
  add_executable(hello-putchar hello-putchar.c)
  install_example(hello-putchar)
  add_executable(init-functions init-functions.cc)
  install_example(init-functions)
  add_executable(struct-of-arrays struct-of-arrays.cc)
  install_example(struct-of-arrays)
endif()

if(PLATFORM MATCHES ^nes-)
  add_subdirectory(nes)
endif()
if(PLATFORM STREQUAL pce)
  add_subdirectory(pce)
endif()
if(PLATFORM MATCHES rpc8e)
  add_subdirectory(rpc8e)
endif()
if(PLATFORM MATCHES ^c64)
  add_subdirectory(c64)
endif()
if(PLATFORM MATCHES ^cx16)
  add_subdirectory(cx16)
endif()
if(PLATFORM STREQUAL eater)
  add_subdirectory(eater)
endif()
if(PLATFORM STREQUAL geos-cbm)
  add_subdirectory(geos-cbm)
endif()
if(PLATFORM MATCHES ^atari2600-)
  add_subdirectory(atari2600)
endif()
if(PLATFORM STREQUAL mega65)
  add_subdirectory(mega65)
endif()
if(PLATFORM STREQUAL neo6502)
  add_subdirectory(neo6502)
endif()
