add_executable(k_cbm_file_test.prg k_cbm_file_test.c)
install_example(k_cbm_file_test.prg)

add_executable(k_console_test.prg k_console_test.c)
install_example(k_console_test.prg)

add_executable(k_datetime_test.prg k_datetime_test.c)
install_example(k_datetime_test.prg)

add_executable(k_graph_test.prg k_graph_test.c)
install_example(k_graph_test.prg)

add_executable(k_graph_line_test.prg k_graph_line_test.c)
install_example(k_graph_line_test.prg)

add_executable(k_joystick_get_test.prg k_joystick_get_test.cc)
install_example(k_joystick_get_test.prg)

add_executable(plasma.prg plasma.cc)
install_example(plasma.prg)
